--- a/views/curse-video/index.html
+++ b/views/curse-video/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
+        <title>Cursed video generator</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
-            @import url("css/navbar.css");
+            @import url("/css/navbar.css");
             body {
-                background-color:rgb(50, 50, 50);
+                background-color: rgb(50, 50, 50);
             }
             h1 {
                 text-align: center;
@@ -25,30 +26,15 @@
                 font-family: Arial, Helvetica, sans-serif;
                 color: white;
             }
-            a {
-                display: block;
-                padding: 8px;
-            }
         </style>
     </head>
-
     <body>
-
-        <div class="header">
-            <h1>Prysm</h1>
-            <h2>The all-in-one Discord bot</h2>
-        </div>
-
         <div class="top">
             <ul>
-                <li><a href="/index.html" class="active">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/ytdl/index.html">YT Converter</a></li>
-                <li><a href="/curse-video/index.html">Cursed video generator</a></li>
+                <li><a href="/curse-video/index.html" class="active">Cursed video generator</a></li>
             </ul>
         </div>
-
-        <iframe src="https://discordapp.com/widget?id=702551414219473056&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" style="margin-top: 1vw;">https://discord.gg/aTRHKUY</iframe>
-        
     </body>
-
 </html>
