Added "work in progress"

--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prysm</title>
+    <meta name="Some HTML stuff i guess" content="yeet">
+    <meta property="og:title" content="i want to die">
+    <meta property=”og:description” content="OG Description">
+    <meta property="og:url" content="https://prysm.herokuapp.com/">
+    <meta property="og:image" content="https://prysm.herokuapp.com/assets/prysm-logo-x64.png">
+
     <head>
         <style>
             @import url("css/navbar.css");
@@ -10,7 +17,7 @@
             h1 {
                 text-align: center;
                 font-weight: normal;
-                font-size: 4vw;
+                font-size: 70px;
                 margin: 0.5vw;
                 padding: 0vw;
                 font-family: Arial, Helvetica, sans-serif;
@@ -19,7 +26,7 @@
             h2 {
                 text-align: center;
                 font-weight: normal;
-                font-size: 2vw;
+                font-size: 35px;
                 margin: 0.5vw;
                 padding: 0vw;
                 font-family: Arial, Helvetica, sans-serif;
@@ -46,6 +53,8 @@
                 <li><a href="/curse-video/index.html">Cursed video generator</a></li>
             </ul>
         </div>
+
+        <h2 style="font-size: 50px;">This website is work in progress.</h2>
 
         <iframe src="https://discordapp.com/widget?id=702551414219473056&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" style="margin-top: 1vw;">https://discord.gg/aTRHKUY</iframe>
         
