--- a/views/curse-video/index.html
+++ b/views/curse-video/index.html
@@ -12,8 +12,7 @@
                 text-align: center;
                 font-weight: normal;
                 font-size: 4vw;
-                margin: 0.5vw;
-                padding: 0vw;
+                margin-top: 1vw;
                 font-family: Arial, Helvetica, sans-serif;
                 color: white;
             }
@@ -36,5 +35,6 @@
                 <li><a href="/curse-video/index.html" class="active">Cursed video generator</a></li>
             </ul>
         </div>
+        <h1>[Work in progress]</h1>
     </body>
 </html>
