--- a/views/404.html
+++ b/views/404.html
@@ -46,8 +46,8 @@
 
         <body>
             <h0>404</h0>
-            <h1>This is an error.</h1>
-            <h2>Click <a href=/index.html style="color: #ffffff">here</a> to go back to the main page.</h2>
+            <h1>That's an error.</h1>
+            <h2>Click <a href=/index.html style="color: #ffffff">here</a> to go back to the home page.</h2>
         </body>
 
     </head>
