--- a/views/curse-video/index.html
+++ b/views/curse-video/index.html
@@ -5,6 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             @import url("/css/navbar.css");
+            @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+            @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+            
+            html * {
+                font-family: 'Roboto', sans-serif;
+            }
+
             body {
                 background-color: rgb(50, 50, 50);
             }
@@ -13,7 +20,7 @@
                 font-weight: normal;
                 font-size: 4vw;
                 margin-top: 1vw;
-                font-family: Arial, Helvetica, sans-serif;
+                font-family: 'Roboto', sans-serif;
                 color: white;
             }
             h2 {
@@ -22,7 +29,7 @@
                 font-size: 2vw;
                 margin: 0.5vw;
                 padding: 0vw;
-                font-family: Arial, Helvetica, sans-serif;
+                font-family: 'Roboto', sans-serif;
                 color: white;
             }
         </style>
