--- a/views/ytdl/index.html
+++ b/views/ytdl/index.html
@@ -4,12 +4,19 @@
         <title>YouTube Downloader</title>
         <style>
             @import url("/css/navbar.css");
+            @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+            @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
+            html * {
+                font-family: 'Roboto', sans-serif;
+            }
+
             body {
                 background-color: rgb(50, 50, 50);
             }
             h1 {
                 color: white;
-                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-family: 'Roboto', sans-serif;
                 left: 0;
                 margin-top: 35px;
                 text-align: center;
@@ -18,7 +25,7 @@
             }
             h2 {
                 color: white;
-                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-family: 'Roboto', sans-serif;
                 left: 0;
                 line-height: 25px;
                 margin-top: -20px;
@@ -29,7 +36,7 @@
             }
             h3 {
                 color: white;
-                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-family: 'Roboto', sans-serif;
                 left: 0;
                 line-height: 20px;
                 text-align: center;
@@ -42,7 +49,7 @@
             }
             h4 {
                 color: white;
-                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-family: 'Roboto', sans-serif;
                 left: 0;
                 line-height: 20px;
                 margin-top: 30px;
