Moved webserver to folder

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -28,8 +28,8 @@
             h1 {
                 text-align: center;
                 font-weight: normal;
-                font-size: 70px;
-                margin: 0.5vw;
+                font-size: 100px;
+                margin: 19px;
                 padding: 0vw;
                 font-family: 'Roboto', sans-serif;
                 color: white;
@@ -82,8 +82,7 @@
     <body>
 
         <div class="header">
-            <h1>Prysm</h1>
-            <h2>The all-in-one Discord bot</h2>
+            <img src="/assets/prysm-logo-x200.png" style="height: 120px; margin-top: 30px; margin-bottom: 30px; margin-left: calc(50% - 60px)">
         </div>
 
         <div class="top" id="navbar">
