--- a/server/views/ytdl/index.html
+++ b/server/views/ytdl/index.html
@@ -101,6 +101,8 @@
                 <label for="auto" style="color: white; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"> MP4</label>
                 <input type="radio" id="flv" name="format" value="flv" style="color: white;">
                 <label for="auto" style="color: white; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"> FLV</label>
+                <input type="radio" id="webm" name="format" value="webm" style="color: white;">
+                <label for="auto" style="color: white; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"> WEBM</label>
                 <input type="radio" id="mp3" name="format" value="mp3" style="color: white;">
                 <label for="auto" style="color: white; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"> MP3</label>
             </div>
