Changed music player

--- a/webinterface/views/dashboard/server/GUILD_ID/music.ejs
+++ b/webinterface/views/dashboard/server/GUILD_ID/music.ejs
@@ -212,6 +212,7 @@
                 white-space: nowrap;
                 text-overflow: ellipsis;
                 overflow: hidden;
+                width: 400px;
             }
             .controls c {
                 color: #999999;
